title text button - added align-items center to center the title fix1

--- a/assets/title_text_button.css
+++ b/assets/title_text_button.css
@@ -96,7 +96,6 @@
         flex-direction: row-reverse;
         justify-content: center;
         align-items: center;
-        align-items: center;
     }
  
     .title_text_button-title-wrapper.title_position-left  {
